--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 </div>
 
                 <div class="yourProjectSectionCards">
-                    <h3>easy Peasy App</h3>
+                    <h3>Easy Peasy App</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A autem quasi voluptate explicabo. Ducimus, numquam!</p>
                     <div class="cardIcons">
                         <img class="starIcon" src="./images/star-plus-outline.svg">
@@ -167,7 +167,7 @@
 
             <div class="annoucementSection">
                 <div class="annoucementSectionContents">
-                    <h3>Site maintenance</h3>
+                    <h3 class="topAnnoucement">Site maintenance</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque, iure atque.</p>
                     <hr>
                 </div>
