modified the trending section user names

--- a/index.html
+++ b/index.html
@@ -200,24 +200,24 @@
                 <div class="trendingSectionContents">
                     <img class="cartooonIcon" src="./images/icons8-cartoon.svg">
                     <div class="trendingUSerInfo">
-                        <p>@tegan</p>
-                        <p>World Peace Builder</p>
+                        <p>@morgan</p>
+                        <p>Super Cool Project</p>
                     </div>
                 </div>
 
                 <div class="trendingSectionContents">
                     <img class="dogIcon" src="./images/icons8-santas-little-helper.svg">
                     <div class="trendingUSerInfo">
-                        <p>@tegan</p>
-                        <p>World Peace Builder</p>
+                        <p>@kendall</p>
+                        <p>Life Changing App</p>
                     </div>
                 </div>
 
                 <div class="trendingSectionContents">
                     <img class="tomIcon" src="./images/icons8-tom.svg">
                     <div class="trendingUSerInfo">
-                        <p>@tegan</p>
-                        <p>World Peace Builder</p>
+                        <p>@alex</p>
+                        <p>No Traffic Maker</p>
                     </div>
                 </div>
             </div>
